--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Colmar Academy</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 
@@ -32,7 +32,7 @@
     <!-- Hero Section -->
     <header class="hero">
         <div class="container d-flex align-items-center">
-            <img src="/resources/banner.jpg" class="img-fluid hero-img" alt="Students Studying">
+            <img src="resources\banner.jpg" class="img-fluid hero-img" alt="Students Studying">
             <div class="hero-text">
                 <h1>Learn something new everyday</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -45,13 +45,13 @@
     <section class="container my-5">
         <div class="row">
             <div class="col-md-8">
-                <img src="/resources/information-main.jpg" class="img-fluid" alt="Studying">
+                <img src="resources\information-main.jpg" class="img-fluid" alt="Studying">
                 <h2>It doesn't hurt to keep practicing</h2>
                 <p>"Curabitur vitae libero in ipsum porttitor consequat."</p>
             </div>
             <div class="col-md-4">
                 <div class="d-flex">
-                    <img src="/resources/information-orientation.jpg" class="img-fluid main-img" alt="Orientation">
+                    <img src="resources\information-orientation.jpg" class="img-fluid main-img" alt="Orientation">
                     <div style="margin: 3%; justify-content: center;">
                         <h3>Orientation date</h3>
                         <p>Tue 10/11 & Wed 10/12 8am-3pm</p>
@@ -59,7 +59,7 @@
 
                 </div>
                 <div class="d-flex">
-                    <img src="/resources/information-campus.jpg" class="img-fluid main-img" alt="Orientation">
+                    <img src="resources\information-campus.jpg" class="img-fluid main-img" alt="Orientation">
                     <div style="margin: 3%; justify-content: center;">
                         <h3>Our Campus</h3>
                         <p>Find which campus is close to you</p>
@@ -67,7 +67,7 @@
                     
                 </div>
                 <div class="d-flex">
-                    <img src="/resources/information-guest-lecture.jpg" class="img-fluid main-img" alt="Orientation">
+                    <img src="resources\information-guest-lecture.jpg" class="img-fluid main-img" alt="Orientation">
                     <div style="margin: 3%; justify-content: center;">
                         <h3>Our Guest Lecture</h3>
                         <p>Join a keynote with Oliver Sack about music in medical treatment</p>
