fixed img path issues

--- a/index.html
+++ b/index.html
@@ -83,19 +83,19 @@
         <h2 class="text-center">Start learning</h2>
         <div class="row">
             <div class="col-md-4">
-                <img src="/resources/course-software.jpg" class="img-fluid" alt="Software Engineering">
+                <img src="resources\course-software.jpg" class="img-fluid" alt="Software Engineering">
                 <h4>Software Engineering</h4>
                 <p>COURSES</p>
                 <p>Web Development, Mobile Development, APIs</p>
             </div>
             <div class="col-md-4">
-                <img src="/resources/course-computer-art.jpg" class="img-fluid" alt="Computer Art">
+                <img src="resources\course-computer-art.jpg" class="img-fluid" alt="Computer Art">
                 <h4>Computer Art</h4>
                 <p>COURSES</p>
                 <p>Web Design, Animation, Motion Graphics</p>
             </div>
             <div class="col-md-4">
-                <img src="/resources/course-design.jpg" class="img-fluid" alt="Design">
+                <img src="resources\course-design.jpg" class="img-fluid" alt="Design">
                 <h4>Design</h4>
                 <p>COURSES</p>
                 <p>User Experience, Visual Design</p>
@@ -103,19 +103,19 @@
         </div>
         <div class="row">
             <div class="col-md-4">
-                <img src="/resources/course-data.jpg" class="img-fluid" alt="Software Engineering">
+                <img src="resources\course-data.jpg" class="img-fluid" alt="Software Engineering">
                 <h4>Data</h4>
                 <p>COURSES</p>
                 <p>Data Science, Big Data, SQL, Data Visualization</p>
             </div>
             <div class="col-md-4">
-                <img src="/resources/course-business.jpg" class="img-fluid" alt="Computer Art">
+                <img src="resources\course-business.jpg" class="img-fluid" alt="Computer Art">
                 <h4>Business</h4>
                 <p>COURSES</p>
                 <p>Product Development, Business Development, Startup</p>
             </div>
             <div class="col-md-4">
-                <img src="/resources/course-marketing.jpg" class="img-fluid" alt="Design">
+                <img src="resources\course-marketing.jpg" class="img-fluid" alt="Design">
                 <h4>Marketing</h4>
                 <p>COURSES</p>
                 <p>Analytics, Content Marketing, Mobile Marketing</p>
@@ -135,10 +135,10 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad dolores illo cumque repellendus reiciendis eaque nemo eum, est itaque quaerat? Ad sed quia voluptate quisquam error laudantium cum molestiae cumque.</p>
             </div>
             <div class="col-md-4">
-                <img src="/resources/thesis-fisma.jpg" class="img-fluid main-img" alt="Fisma Design">
+                <img src="resources\thesis-fisma.jpg" class="img-fluid main-img" alt="Fisma Design">
                 <h3>Fisma: Design and Prototype</h3>
                 <p>Designer showcase of new prototype product</p>
-                <img src="/resources/thesis-now-and-then.jpg" class="img-fluid main-img" alt="Fisma Design">
+                <img src="resources\thesis-now-and-then.jpg" class="img-fluid main-img" alt="Fisma Design">
                 <h3>Now and Then</h3>
                 <p>Research study about New York</p>
             </div>
